fixed spacing of organization button

--- a/docs/css/components/category.scss
+++ b/docs/css/components/category.scss
@@ -8,7 +8,7 @@
     left: $padding * 4;
 
   & #add-organization{
-    letter-spacing: 1.7px;
+    letter-spacing: 1.5px;
     font-size: 1em;
     display: block;
     border-radius: 10px;
